# myo

./: .gitignore  README.md  myo.cabal  stack.yaml  test.sh  watch.sh
cbits/: wrapper.c
examples/: WS.hs
include/: wrapper.h
src/: Myo.c  Myo.hs
src/Myo/: .#WebSockets.hs  Hub.hs  Types.hs  WebSockets.hs
src/Myo/Foreign/: Device.hsc  Event.hsc  Handler.hsc  Hub.hs  Hub.hsc  Locking.hsc  Result.hsc  String.c  String.hs  Types.hs  Types.hsc
src/Myo/Foreign/Hub/: Types.c  Types.hsc
src/Myo/Foreign/String/: Types.c  Types.hsc
src/Myo/WebSockets/: Types.hs
test/: Tests.hs
