name:                myo
version:             0.1.0.0
synopsis:            Haskell binding to the Myo armband
description:         Please see README.md
homepage:            http://github.com/adinapoli/myo
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
-- copyright:
category:            System
build-type:          Simple
-- extra-source-files:

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  include-dirs:
    include
  exposed-modules:
    Myo
    Myo.Foreign.Hub
    Myo.Foreign.Types
    Myo.Foreign.Result
    Myo.Foreign.String
    Myo.Foreign.Device
    Myo.Foreign.Locking
    Myo.Foreign.Event
    Myo.Foreign.Handler
  build-depends:
    base >= 4.7 && < 5,
    containers,
    template-haskell,
    inline-c
  extra-libraries:
    stdc++
  ld-options:
    -framework myo
  other-extensions:
    TemplateHaskell
    QuasiQuotes
    OverloadedStrings
  c-sources:
    cbits/wrapper.c
    src/Myo.c
    src/Myo/Foreign/String.c
    src/Myo/Foreign/Types.c
    src/Myo/Foreign/Hub.c
  ghc-options:
    -Wall
    -Werror

  default-language:    Haskell2010

test-suite myo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base
                     , myo
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adinapoli/myo
